add html code & images

--- a/index.html
+++ b/index.html
@@ -1,17 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Flip Card</title>
     <!-- CSS -->
- 
     <link rel="stylesheet" href="./sources/css/style.css">
+
+	<title>Flip Card</title>
 </head>
 <body>
-	
+	<div class="card">
+		<div class="cover"></div>
+		<div class="details">
+			<div>
+				<img src="./sources/image/watch2.png" alt="watch">
+				<h3>Nouvelle Apple Watch</h3>
+				<h2><sup>€</sup>450</h2>
+				<a href="#">Achetez</a>
+			</div>
+		</div>
+	</div>
 </body>
-<!-- JS -->
-
 </html>
