--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 </head>
 <body>
 	<div class="card">
-		<div class="cover"></div>
+		<div class="cover">
+			<img src="./sources/image/watch.png" alt="">
+		</div>
 		<div class="details">
 			<div>
 				<img src="./sources/image/watch2.png" alt="watch">
